; ModuleID = '/home/carl/AnghaBench/linux/net/netfilter/ipvs/extr_ip_vs_mh.c_ip_vs_mh_get_port.c'
source_filename = "/home/carl/AnghaBench/linux/net/netfilter/ipvs/extr_ip_vs_mh.c_ip_vs_mh_get_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.ip_vs_iphdr = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.ip_vs_iphdr*)* @ip_vs_mh_get_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ip_vs_mh_get_port(%struct.sk_buff* %0, %struct.ip_vs_iphdr* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.ip_vs_iphdr*, align 8
  %6 = alloca [2 x i32], align 4
  %7 = alloca i32*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.ip_vs_iphdr* %1, %struct.ip_vs_iphdr** %5, align 8
  %8 = load %struct.ip_vs_iphdr*, %struct.ip_vs_iphdr** %5, align 8
  %9 = getelementptr inbounds %struct.ip_vs_iphdr, %struct.ip_vs_iphdr* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %41 [
    i32 129, label %11
    i32 128, label %11
    i32 130, label %11
  ]

11:                                               ; preds = %2, %2, %2
  %12 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %13 = load %struct.ip_vs_iphdr*, %struct.ip_vs_iphdr** %5, align 8
  %14 = getelementptr inbounds %struct.ip_vs_iphdr, %struct.ip_vs_iphdr* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = bitcast [2 x i32]* %6 to i32**
  %17 = call i32* @skb_header_pointer(%struct.sk_buff* %12, i32 %15, i32 8, i32** %16)
  store i32* %17, i32** %7, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = icmp ne i32* %18, null
  %20 = xor i1 %19, true
  %21 = zext i1 %20 to i32
  %22 = call i32 @unlikely(i32 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %11
  store i32 0, i32* %3, align 4
  br label %42

25:                                               ; preds = %11
  %26 = load %struct.ip_vs_iphdr*, %struct.ip_vs_iphdr** %5, align 8
  %27 = call i32 @ip_vs_iph_inverse(%struct.ip_vs_iphdr* %26)
  %28 = icmp ne i32 %27, 0
  %29 = xor i1 %28, true
  %30 = zext i1 %29 to i32
  %31 = call i32 @likely(i32 %30)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %25
  %34 = load i32*, i32** %7, align 8
  %35 = getelementptr inbounds i32, i32* %34, i64 0
  %36 = load i32, i32* %35, align 4
  store i32 %36, i32* %3, align 4
  br label %42

37:                                               ; preds = %25
  %38 = load i32*, i32** %7, align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 1
  %40 = load i32, i32* %39, align 4
  store i32 %40, i32* %3, align 4
  br label %42

41:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %42

42:                                               ; preds = %41, %37, %33, %24
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i32* @skb_header_pointer(%struct.sk_buff*, i32, i32, i32**) #1

declare dso_local i32 @unlikely(i32) #1

declare dso_local i32 @likely(i32) #1

declare dso_local i32 @ip_vs_iph_inverse(%struct.ip_vs_iphdr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
